force-app/main/default/objects/Deleted_Record__c/Deleted_Record__c.object-meta.xml
<CustomObject>
    <description>This object will be the container for Account, Leads, Contacts, Task and Opportunities that should be deleted from SellScience.</description>
    <label>Deleted Record</label>
    <nameField>
        <displayFormat>Delete-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deleted Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>