force-app/main/default/objects/Deleted_Record__c/fields/Bulk_Delete__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to Bulk Delete records</description>
    <label>Bulk Delete</label>
    <type>Checkbox</type>
</CustomField>