force-app/main/default/objects/Deleted_Record__c/fields/Deleted_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Deleted_Business_Unit__c</fullName>
    <description>On the record that was deleted storing the sM-Business Unit value</description>
    <label>Deleted Business Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>