force-app/main/default/objects/Deleted_Record__c/fields/Deleted_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Deleted_Date_Time__c</fullName>
    <description>Date/Time of when record was deleted</description>
    <label>Deleted Date/Time</label>
    <type>DateTime</type>
</CustomField>