force-app/main/default/objects/Deleted_Record__c/fields/Deleted_Object__c.field-meta.xml
<CustomField>
    <fullName>Deleted_Object__c</fullName>
    <description>Which object the record was deleted from</description>
    <label>Deleted Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>