force-app/main/default/objects/Deleted_Record__c/fields/Deleted_SafeID__c.field-meta.xml
<CustomField>
    <fullName>Deleted_SafeID__c</fullName>
    <description>The deleted record&apos;s safe ID</description>
    <label>Deleted SafeID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>